# waycast

./: .changie.yaml  .env  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  DEVLOG.md  Justfile  Makefile  README.md  TODO.md  build.zig  devenv.nix  dist-workspace.toml  flake.nix  plan.md  release.toml  result  shell.nix  tmp.txt  waycast-daemon.service
.changes/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v1.0.0.md
.changes/unreleased/: Added-20260707-214824.yaml  Added-20260707-214917.yaml  Technical-20260707-193832.yaml  Technical-20260707-214849.yaml  Technical-20260707-232847.yaml  Technical-20260708-234240.yaml
.direnv/: flake-profile-3-link
.forgejo/workflows/: changelog.yml  ci.yml  release.yml
.sqlx/: query-0ca0232e2b489e411dcfa9d8e4b5ac282d3647e89077cc79a06984cb2ddacf60.json  query-19dcd5d813a5ddec997133330f8d5ad1f05e2c96967dfba98bdcbdccc608770c.json  query-1c748930bde34113379f03e661f8323fcbd647acf68fa7421a3791845f2e11bb.json  query-31ec506720699576d6ca6e39e7e5c15bcd919f067d0236c9f9c7fdc436803ffb.json  query-4e838de6bc6394d4896cd349df34e22fd80ae89c05c22a7414d086d36c09adba.json  query-57e14e65350a9843e459b05277f5462d4df30f4d5332e16c999a0a1b715fe712.json  query-5f30b34824b4cb917a0559c0fbaca210c0e21c12dc5aa8c4a4951a4bf401ec59.json  query-8eb088394868f3ddb93c57d5ce25c4ca1438468cf13448949be59091ca0df11b.json  query-a8455002d89cc89b5d67239eb30942c4a987d22882b74036297da97dc99c28b8.json  query-b242e278a00b5017145391d5e8ea9f8ef6798587513ae17d5f0b6ae6405bb1b4.json  query-b601398663917df369861db40ded4df2a3eb0b418ae284f47a07782e67d8a15f.json  query-c28060f752a7ae91bde7b5e68c26df05fb25ef379ca851a34ae8ef294e1064c2.json  query-d102f22061152c25de12f57cec03a262ff13b91248e4e0d7be4ddc37fa8115ad.json  query-f0efa5385dc7a0fca82cf57f2d167ecf4afac4d1e519665366b8949f6a507f79.json
lib/: IconUtil.hpp  dmenu.hpp  files.hpp  fuzzy.hpp
lib/plugins/: PluginInterface.hpp  PluginManager.hpp
lib/ui/: AppListModel.cpp  AppListModel.hpp  DesktopAppListItem.hpp  GenericListItem.hpp  ListItem.cpp  ListItem.hpp
migrations/: 0001_init.sql
modules/home-manager/: waycast.nix
src/: app.rs  lib.rs  main.cpp  main.rs  qrc_resources.cpp  socket.rs
src/cmd/: mod.rs
src/core/: config.rs  launcher.rs  mod.rs  model.rs  search.rs
src/core/data/: cache.rs  items.rs  mod.rs
src/daemon/: mod.rs  watcher.rs
src/daemon/scanners/: mod.rs
src/daemon/scanners/projects/: framework_detector.rs  framework_macro.rs  mod.rs  type_scanner.rs
src/drun/: mod.rs
src/launcher/: mod.rs
src/plugins/: DesktopAppPlugin.hpp  ExamplePlugin.hpp  FileSearchPlugin.hpp  FileSystemPlugin.hpp  drun.rs  file_search.rs  mod.rs
src/plugins/DesktopAppPlugin/: DesktopAppListItem.cpp  DesktopAppListItem.hpp
src/plugins/FileSearch/: FileSearchExample.hpp  FileSearchIntegrationExample.cpp  FileSearchPlugin.hpp
src/ui/: app.rs  controller.rs  launcher_builder.rs  mod.rs  styles.rs  traits.rs
src/ui/gtk/: default.css  mod.rs
src/util/: files.rs
testbench/: Cargo.toml
testbench/src/: main.rs
ui/: Main.qml  resources.qrc
waycast/: Cargo.toml
waycast-config/: Cargo.toml
waycast-config/src/: lib.rs  main.rs
waycast-core/: Cargo.toml
waycast-core/src/: facade.rs  lib.rs
waycast-core/src/cache/: errors.rs  mod.rs
waycast-daemon/: Cargo.toml
waycast-daemon/src/: lib.rs  main.rs
waycast-daemon/src/scanners/: mod.rs
waycast-daemon/src/scanners/projects/: framework_detector.rs  framework_macro.rs  mod.rs
waycast-data/: .env  Cargo.toml
waycast-data/migrations/: 0001_init.sql
waycast-data/src/: cache.rs  icons.rs  items.rs  lib.rs
waycast-facade/: Cargo.toml
waycast-facade/src/: lib.rs
waycast-gtk/: Cargo.toml
waycast-gtk/src/: main.rs
waycast-gtk/src/ui/gtk/: mod.rs
waycast-gtk/src/util/: files.rs
waycast-iced/: Cargo.toml
waycast-iced/src/: app.rs  config.rs  icons.rs  main.rs  theme.rs
waycast-iced/src/ui/: styles.rs
waycast-ipc/: Cargo.toml
waycast-ipc/src/: lib.rs
waycast-macros/: Cargo.toml  README.md
waycast-macros/src/: lib.rs
waycast-plugins/: Cargo.toml
waycast-plugins/src/: calculator.rs  drun.rs  file_search.rs  lib.rs  main.rs  projects.rs  util.rs
waycast-plugins/src/projects/: framework_detector.rs  framework_macro.rs  mod.rs  type_scanner.rs
waycast-protocol/: Cargo.toml
waycast-protocol/src/: client.rs  lib.rs  protocol.rs  server.rs  socket.rs
waycast-scanner/: Cargo.toml
waycast-scanner/src/: lib.rs
waycast-ui/: Cargo.toml
waycast-ui/src/: app.rs  config.rs  icons.rs  lib.rs  main.rs  theme.rs
waycast-ui/src/ui/: styles.rs
waycast/src/: lib.rs  main.rs
