[workspace]
members = [
    "waycast-core",
    "waycast-macros",
    "waycast-plugins",
    "waycast-gtk",
    "waycast-config", "waycast-daemon",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["Javier Feliz <me@javierfeliz.com>"]
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Feature-rich application launcher for Wayland compositors"
homepage = "https://waycast.dev"
repository = "https://gitgud.foo/thegrind/waycast"
categories = ["gui", "os::unix-apis"]
keywords = ["launcher", "wayland", "gtk4", "application-launcher", "desktop"]
