[workspace]
members = [
    "waycast-core",
    "waycast-config",
    "waycast-ui",
    "waycast-daemon",
    "waycast-data",
    "waycast-facade",
]
resolver = "2"

[workspace.package]
version = "0.5.1"
authors = ["Javier Feliz <me@javierfeliz.com>"]
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Feature-rich application launcher for Wayland compositors"
homepage = "https://waycast.dev"
repository = "https://github.com/javif89/waycast"
categories = ["gui", "os::unix-apis"]
keywords = ["launcher", "wayland", "gtk4", "application-launcher", "desktop"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
