[package]
name = "waycast"
version = "1.0.0"
authors = ["Javier Feliz <me@javierfeliz.com>"]
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
description = "Feature-rich application launcher for Wayland compositors"
homepage = "https://waycast.dev"
repository = "https://github.com/javif89/waycast"
categories = ["gui", "os::unix-apis"]
keywords = ["launcher", "wayland", "gtk4", "application-launcher", "desktop"]

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
config = "0.15.15"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
freedesktop = { version = "0.0.3", features = ["icon"] }
fs2 = "0.4.3"
gio = "0.21.5"
glib = "0.21.5"
iced = { version = "0.13.1", features = ["image", "svg", "tokio"] }
iced_layershell = "0.13.7"
ignore = "0.4.25"
libc = "0.2.180"
mathengine = "0.1.1"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
notify-debouncer-full = { version = "0.7.0", features = ["crossbeam-channel"] }
notify-rust = "4.12.0"
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0", features = [
    "tls-rustls",
    "runtime-tokio",
    "sqlite",
    "derive",
    "migrate",
] }
thiserror = "2.0.18"
tokei = "14.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.21.0"

[profile.dist]
inherits = "release"
lto = "thin"
