[package]
name = "testbench"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
waycast-core = { version = "0.5.1", path = "../waycast-core" }
waycast-data = { version = "0.5.1", path = "../waycast-data" }
waycast-plugins = { version = "0.5.1", path = "../waycast-plugins" }
waycast-scanner = { version = "0.5.1", path = "../waycast-scanner" }
