[package]
name = "waycast-config"
description = "Configuration management and XDG directory handling for Waycast"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
config = { version = "0.15.15", features = ["toml"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_toml = "0.0.1"
toml = "0.9.5"
