[package]
name = "waycast-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
redb = "3.0.1"
serde = { version = "1.0.219", features = ["derive"] }
waycast-config = { path = "../waycast-config" }

[dev-dependencies]
tempfile = "3.21.0"
# No dependencies for core traits and launcher logic