[package]
name = "waycast-core"
description = "Core traits, caching system, and plugin architecture for Waycast launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bincode = "1.3"
redb = "3.0.1"
serde = { version = "1.0.219", features = ["derive"] }
waycast-config = { path = "../waycast-config" }

[dev-dependencies]
tempfile = "3.21.0"
# No dependencies for core traits and launcher logic