[package]
name = "waycast-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0.223", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
waycast-core = { path = "../waycast-core" }
waycast-plugins = { path = "../waycast-plugins" }
waycast-ipc = { version = "0.0.2", path = "../waycast-ipc" }
zbus = { version = "5.11.0", features = ["option-as-array"] }
