[package]
name = "waycast-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
crossbeam-channel = "0.5.15"
directories = "6.0.0"
freedesktop = "0.0.3"
gio = "0.21.5"
glib = "0.21.5"
ignore = "0.4.25"
serde = "1.0.228"
serde_json = "1.0.149"
tokei = "14.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
waycast-config = { version = "0.5.1", path = "../waycast-config" }
waycast-core = { version = "0.5.1", path = "../waycast-core" }
waycast-data = { version = "0.5.1", path = "../waycast-data" }
waycast-facade = { version = "0.5.1", path = "../waycast-facade" }
