[package]
name = "waycast-gtk"
description = "GTK4 frontend for Waycast application launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "waycast"
path = "src/main.rs"

[dependencies]
waycast-ipc = { path = "../waycast-ipc" }
waycast-config = { path = "../waycast-config" }
gio = "0.21.1"
glib = "0.21.1"
gtk = { version = "0.10.0", package = "gtk4" }
gtk4-layer-shell = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
zbus = "5.11.0"
