[package]
name = "waycast-gtk"
description = "GTK4 frontend for Waycast application launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "waycast"
path = "src/main.rs"

[dependencies]
waycast-core = { path = "../waycast-core" }
waycast-plugins = { path = "../waycast-plugins" }
waycast-config = { path = "../waycast-config" }
gio = "0.21.1"
glib = "0.21.1"
gtk = { version = "0.10.0", package = "gtk4" }
gtk4-layer-shell = "0.6.1"
freedesktop = { version = "0.0.3", features = ["icon"] }
