[package]
name = "waycast-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0.223", features = ["derive"] }
waycast-core = { version = "0.0.2", path = "../waycast-core" }
zvariant = { version = "5.7.0", features = ["option-as-array"] }
