[package]
name = "waycast-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
waycast-core = { path = "../waycast-core" }
waycast-macros = { path = "../waycast-macros" }
waycast-config = { path = "../waycast-config" }
directories = "6.0.0"
gio = "0.21.1"
glib = "0.21.1"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
walkdir = "2.5.0"
tokei = "12.1.2"
serde = "1.0.219"
serde_json = "1.0.143"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }
