[package]
name = "waycast-plugins"
description = "Plugin collection for Waycast launcher (desktop apps, files, projects)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
waycast-core = { path = "../waycast-core" }
waycast-config = { path = "../waycast-config" }
directories = "6.0.0"
gio = "0.21.1"
glib = "0.21.1"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
walkdir = "2.5.0"
tokei = "12.1.2"
serde = "1.0.219"
serde_json = "1.0.143"
libc = "0.2.175"
nucleo-matcher = "0.3.1"
freedesktop = "0.0.3"
mathengine = "0.1.0"
ignore = { version = "0.4.25", features = ["simd-accel"] }
crossbeam-channel = "0.5.15"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }
