[package]
name = "waycast-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["net", "io-util", "macros", "rt", "sync"] }
thiserror = "2.0"
libc = "0.2"
dirs = "5.0"
async-trait = "0.1"
