[package]
name = "waycast-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "waycast"
path = "src/main.rs"

[dependencies]
freedesktop = { version = "0.0.3", features = ["icon"] }
iced = { version = "0.13.1", features = ["image", "svg"] }
iced_layershell = "0.13.7"
mathengine = "0.1.0"
waycast-core = { path = "../waycast-core" }
waycast-plugins = { path = "../waycast-plugins" }
