[package]
name = "waycast-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "waycast"
path = "src/main.rs"

[dependencies]
freedesktop = { version = "0.0.3", features = ["icon"] }
fs2 = "0.4.3"
iced = { version = "0.13.1", features = ["image", "svg", "tokio"] }
iced_layershell = "0.13.7"
mathengine = "0.1.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
waycast-core = { path = "../waycast-core" }
waycast-data = { version = "0.5.1", path = "../waycast-data" }
waycast-facade = { version = "0.5.1", path = "../waycast-facade" }
waycast-plugins = { path = "../waycast-plugins" }
waycast-daemon = { version = "0.5.1", path = "../waycast-daemon" }
