[package]
name = "waycast"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
fs2 = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
waycast-daemon = { version = "0.5.1", path = "../waycast-daemon" }
waycast-ui = { version = "0.5.1", path = "../waycast-ui" }
