[package]
name = "waycast"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
crossbeam-channel = "0.5.15"
freedesktop = "0.0.3"
fs2 = "0.4.3"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
notify-debouncer-full = { version = "0.7.0", features = ["crossbeam-channel"] }
notify-rust = "4.12.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
waycast-core = { version = "0.5.1", path = "../waycast-core" }
waycast-daemon = { version = "0.5.1", path = "../waycast-daemon" }
waycast-data = { version = "0.5.1", path = "../waycast-data" }
waycast-ui = { version = "0.5.1", path = "../waycast-ui" }
